fixed navbar and content alignment for main

--- a/website/static/css/cbase_index.css
+++ b/website/static/css/cbase_index.css
@@ -1,206 +1,38 @@
-.no-padding {
-    /* Removes padding from containers */
-    padding: 0!important;
+:root {
+    --p-none: 0!important;
+    --m-none: 0!important;
 }
 
-.container-fluid.no-padding.landingwrapper {
-    /* Landing page parent container */
-    height: calc(100vh - 64px);
-    background-color: gray;
-}
+/* Removes padding and/or margin from elements */
+.p-none { padding: 0!important; }
+.m-none { margin: 0!important; }
 
-.landing {
-    /* Landing section */
+/* All sections have these attributes */
+section {
+    display: block;
     width: 100%;
     height: 100%;
 }
 
-.landing img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
+section.landing {
+    background-color: purple;
 }
 
-/* .landing-text {
-    color: white;
-    font-weight: 400;
+section.s2 {
+    background-color: green;
 }
 
-.landing-travel-text {
-    width: 100%;
-} */
-
-/* .landing-grid-container {
-    display: grid; 
-    grid-auto-flow: row dense; 
-    grid-auto-columns: 1fr; 
-    grid-template-columns: 1fr; 
-    grid-template-rows: 1fr 1fr 1fr; 
-    gap: 31px 0px; 
-    grid-template-areas: 
-      "."
-      "."
-      "."; 
-
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-} */
-
-@media screen and (min-width: 769px) {
-    .container-fluid.no-padding.landingwrapper {
-        /* If larger resolution > 768px reset landing page size */
-        height: 100vh; 
+/* Media queries */
+@media only screen and (max-width: 768px) {
+    /* Update sections responsiveness */
+    section.landing {
+        width: 100%;
+        height: calc(100vh - 64px);
+        /* background-color: blue; */
     }
-}
-    /* .landing-grid-container { */
-        /* background-color: red; */
-        /* width: calc(100% - 200px);
-        height: 100%;
-        top: 0;
-        left: 200px; */
-    /* } */
 
-
-@media screen and (max-width: 768px) {
-
-    .landing-grid-container {
-        /* background-color: red; */
-        /* width: 100%;
-        height: calc(100% - 64px);
-        top: 64px;
-        left: 0; */
-    }
 }
 
-/* .grid-item {
-    border: 1px solid gray;
-    padding: 20px;
-    font-size: 30px;
+@media only screen and (min-width: 769px) {
 
-    /* height: fit-content; */
-/* } */
-
-/* Child element of landing grid but modifying brand alignment */
-/* .grid-item.container.brand {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-
-} */
-
-/* Brand styling */
-/* p.brand, p.slogan {
-    font-weight: 400;
-    color: white;
-}  */
-
-
-.grid-landing-container { 
-    display: grid; 
-    grid-auto-flow: row dense; 
-    grid-auto-columns: 1fr; 
-    grid-template-rows: 1.2fr 1.4fr; 
-    gap: 0px 0px;
-
-    position: absolute;
-    top: 64px;
-    left: 0;
-    width: 100%;
-    height: calc(100% - 64px);
-}
-
-.landing-middle {
-    display: grid; 
-    grid-template-columns: 1fr 1fr 1fr; 
-    grid-template-rows: 1fr 1fr 1fr; 
-    gap: 0px 0px; 
-    grid-template-areas: 
-      "brand brand brand"
-      "landing-content landing-content landing-content"
-      "landing-content landing-content landing-content"; 
-    grid-area: 1 / 1 / 2 / 2; 
-}
-
-  .brand {
-    grid-area: brand;
-}
-  .landing-content {
-    grid-area: landing-content;
-}
-  .landing-bottom {
-    display: grid; 
-    grid-template-columns: 1fr 1fr 1fr; 
-    grid-template-rows: 0.7fr 1.7fr 0.6fr; 
-    gap: 0px 0px; 
-    grid-template-areas: 
-      ". . ."
-      "Card-1 Card-2 Card-3"
-      ". . ."; 
-    grid-area: 2 / 1 / 3 / 2; 
-}
-
-  .Card-1 {
-    grid-area: Card-1;
-}
-  .Card-2 {
-    grid-area: Card-2;
-}
-  .Card-3 {
-    grid-area: Card-3;
-}
-
-/* .grid-landing-container * {
-    border: 1px solid white;
-} */
-
-@media screen and (min-width: 769px) {
-    .grid-landing-container {
-        top: 0;
-        height: 100%;
-        width: calc(100% - 200px);
-        left: 200px;
-    }
-}
-
-.brand {
-    /* background-color: gray; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.brand > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.brand-text {
-    color: white;
-    text-align: center;
-    font-weight: 400;
-    margin: 1rem;
-}
-
-/* Landing content */
-.landing-content > div {
-    width: 100%;
-    height: 100%;
-    max-width: 1100px;
-    /* background-color: gray; */
-    border: 1px solid white;
-}
-
-
-/* Cards */
-.landing-bottom > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
