--- a/website/static/css/newbase.css
+++ b/website/static/css/newbase.css
@@ -39,25 +39,12 @@
     --bp-xxl: 1400px; 
 }
 
-
-/* Modify scroll bar */
-/* ::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-}
-
-::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: var(--secondary-color);
-} */
-
 /* HTML, body and dark theme */
 html, body {
     height: 100%;
     width: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 html [data-theme="dark"] {
@@ -73,18 +60,11 @@ html [data-theme="dark"] {
 .grid-container {
     display: grid;
     height: 100%;
-    width: 100%;
-    grid-template-columns: 200px 1fr; /* 200px 1fr */
-    grid-template-rows: 64px auto auto 75px; /* 64px. Adding 'auto auto' for main fixes alignment for footer and footer 75px */
-
-    /* Desktops and larger screens */
+    grid-template-rows: 64px 1fr 75px;
     grid-template-areas: 
-        "navbar main"
-        "sidebar main"
-        "sidebar main"
-        "sidebar footer";
-
-    color: var(--text-color);
+    "navbar"
+    "main"
+    "footer";
 }
 
 .grid-container > #navbar {
@@ -95,32 +75,16 @@ html [data-theme="dark"] {
 .grid-container > #sidebar {
     background-color: var(--secondary-color);
     grid-area: sidebar;
-    
 }
 
 .grid-container > #main {
     background-color: var(--primary-color);
     grid-area: main;
+    overflow: auto;
 }
 
 .grid-container > #footer {
-    /* background-color: #eeeeee; */
     grid-area: footer;
-}
-
-@media only screen and (max-width: 768px) {
-    #sidebar {
-        display: none;
-    }
-
-    /* Mobile mode */
-    .grid-container {
-        grid-template-areas: 
-        "navbar navbar"
-        "main main"
-        "main main"
-        "footer footer";
-    }
 }
 
 /* Top navigation bar */
@@ -235,8 +199,6 @@ button {
 
 .grid-nav-account-button > button:hover {
     border-radius: 30%;
-
-    
 }
 
 .grid-nav-basket-button {
@@ -261,40 +223,6 @@ button {
 .grid-nav-basket-button > button:hover {
     border-radius: 30%;
 }
-
-@media only screen and (min-width: 769px) {
-
-    .toggle-navbar {
-        display: none
-    }
-
-    .grid-nav-nav-parent > * {
-        display: none
-    }
-
-    .grid-nav-nav-parent {
-        display: none
-    }
-
-    .grid-nav {
-        width: 200px;
-    }
-}
-
-/* Hide element past breakpoint */
-@media screen and (max-width: 576px) {
-    .grid-nav-account-button,
-    .grid-nav-account-button > * {
-        display: none;
-    }
-    .grid-nav-basket-button,
-    .grid-nav-basket-button > * {
-        display: none
-    }
-}
-
-/* Top Nav dropdown */
-
 
 /* Left Sidebar */
 .grid-sidebar {
@@ -483,25 +411,6 @@ button {
     font-size: 0.9rem;
 }
 
-/* Main
-.grid-container > #main {
-
-    Adds padding to main container for contents
-    padding: 1rem;
-    
-} */
-
-/* @media screen and (max-width: 768px) { */
-
-    /* Move footer up when screen resized if no contents */
-    /* .grid-container > #main { */
-        /* padding: 1rem; */
-        /* height: fit-content; */
-    /* }
-    
-} */
-
-
 /* Footer */
 .grid-footer {
     width: 100%;
@@ -516,14 +425,6 @@ button {
     width: 100%;
     height: 100%;
 }
-
-/* .grid-footer-content {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid red;
-} */
 
 .grid-footer-parent {
     display: flex;
@@ -551,4 +452,68 @@ button {
     height: calc(100% - 64px);
     top: 64px;
     left: 0;
+}
+
+/* main {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+} */
+
+section {
+    /* height: 100%; */
+}
+
+section.test1 {
+    background-color: blue;
+}
+section.test2 {
+    background-color: red;
+}
+
+@media only screen and (min-width: 768px) {
+    /* Grid in mobile mode by default, update to larger resolutions */
+    .grid-container {
+        display: grid;
+        grid-template-columns: 200px 1fr;
+        /* grid-auto-rows: 64px minmax(100vh, auto) 75px; */
+        grid-template-areas: 
+        "sidebar main"
+        "sidebar main"
+        "sidebar footer";
+    }
+
+    .toggle-navbar {
+        display: none;
+    }
+
+    .grid-nav-nav-parent > * {
+        display: none;
+    }
+
+    .grid-nav-nav-parent {
+        display: none;
+    }
+
+    .grid-nav {
+        width: 200px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .grid-container > #sidebar {
+        display: none;
+    }
+}
+
+/* Hide element past breakpoint */
+@media screen and (max-width: 576px) {
+    .grid-nav-account-button,
+    .grid-nav-account-button > * {
+        display: none;
+    }
+    .grid-nav-basket-button,
+    .grid-nav-basket-button > * {
+        display: none
+    }
 }
